SigmaCodebackup3rdSep/objects/Product_Stock__c.object
<CustomObject>
    <fields>
        <fullName>Inventory__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Inventory(Number of Units)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Product Stocks</relationshipLabel>
        <relationshipName>Product_Stocks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <formula>Location_Lookup__r.Location_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Stock</relationshipLabel>
        <relationshipName>Product_Stock</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Minimum_Inventory_Safety_Stock__c</fullName>
        <label>Minimum Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Inventory_Units__c</fullName>
        <formula>Product_Lookup__r.Minimum_Inventory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minimum Inventory(Number of Units)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Stocks</relationshipLabel>
        <relationshipName>Product_Stocks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Stock</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Lookup__c</columns>
        <columns>Location_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Product Stock Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Stock</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>